Checkstyle fixes (bug 592)